 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.9rc1

 - [ZBX-4241] added truncation of "ids" table to the database conversion procedure (asaveljevs)
 - [ZBX-2493] improved default messages for actions (Vedmak)
 - [ZBX-2931] fixed dns and ip fields, item statuses and trigger values for default templates (Sasha,asaveljevs)
 - [ZBX-2361] fixed item keys in the default template "Template_Netscreen_25" (Sasha)
 - [ZBX-3441] fixed server to not process items that are disabled or removed (dimir,Sasha)
 - [ZBX-4249] fixed trigger wizard "insert macro" action break expression (Vedmak)
 - [ZBX-2490] fixed acknowledge flag for events, acknowledged on a child node (Sasha)
 - [ZBX-3743] fixed no triggers returned when api trigger.get is called with "limit" and "withLastEventUnacknowledged" options (Vedmak))
 - [ZBX-4203] fixed api trigger.update method removes dependencies (Vedmak)
 - [ZBX-4232] fixed unclear log messages when checks are temporarily enabled/disabled (dimir)
 - [ZBX-4221] fixed sorting by host in Configuration->Web (Vedmak)
 - [ZBX-4198] fixed items filter when filter by host name with multiple spaces (Vedmak)
 - [ZBX-4145] fixed images import script for PostgreSQL 9.1 and above (dimir)
 - [ZBX-4045] removed the check for duplicate hosts, made the server survive the situation instead (asaveljevs,Sasha)
 - [ZBX-4159] fixed frontend incorrectly handle new ids for history tables in distributed setup (Vedmak)
 - [ZBX-4216] fixed weekdays in Brazilian Portuguese translation; thanks to Ricardo Santos (Richlv)
 - [ZBX-4205] fixed trigger status change not logged in audit for inherited triggers (Vedmak)